--- a/templates/dashboards/packaging/packaging.html
+++ b/templates/dashboards/packaging/packaging.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <style>
         :root {
-            --primary: #4361ee;
-            --secondary: #3a0ca3;
+            --primary: #1e2857;
+            --secondary: #1e094d;
             --success: #4cc9f0;
             --warning: #f72585;
             --info: #7209b7;
