--- a/templates/dashboards/sales/ready_to_go.html
+++ b/templates/dashboards/sales/ready_to_go.html
@@ -13,8 +13,8 @@
 
     <style>
         :root {
-            --primary: #4361ee;
-            --secondary: #3a0ca3;
+            --primary: #1e2857;
+            --secondary: #1e094d;
             --success: #4cc9f0;
             --warning: #f72585;
             --info: #7209b7;
