--- a/templates/dashboards/sales/ready_to_go.html
+++ b/templates/dashboards/sales/ready_to_go.html
@@ -1300,7 +1300,7 @@
 
                         <div class="next-to-pack-container">
                             <button class="next-to-pack-btn" onclick="confirmAndStart('${invoiceObj.live_order_track_id}')">
-                                Prepare for Packing
+                                Start Shipment
                             </button>
                         </div>
                     </div>
