--- a/templates/dashboards/manager/manager.html
+++ b/templates/dashboards/manager/manager.html
@@ -472,7 +472,7 @@
             </li>
             <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/manager/verify-orders" class="sidebar-link"><i class="bi bi-calendar-check"></i> <span>Verify Order</span></a></li>
-            <li><a href="#" class="sidebar-link"><i class="bi bi-clipboard-data"></i> <span>Performance</span></a></li>
+            <li><a href="/manager/cancelled-orders" class="sidebar-link"><i class="bi bi-clipboard-data"></i> <span>Cancelled</span></a></li>
             <li><a href="#" class="sidebar-link"><i class="bi bi-gear"></i> <span>Settings</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
